WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229396
[JSC] emitArrayProfilingSiteWithCell should not load indexingType unnecessarily
https://bugs.webkit.org/show_bug.cgi?id=229396
Summary
[JSC] emitArrayProfilingSiteWithCell should not load indexingType unnecessarily
Yusuke Suzuki
Reported
2021-08-23 02:05:33 PDT
[JSC] emitArrayProfilingSiteWithCell should not load indexingType unnecessarily
Attachments
Patch
(9.49 KB, patch)
2021-08-23 02:06 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2021-08-23 02:06:29 PDT
Created
attachment 436167
[details]
Patch
Yusuke Suzuki
Comment 2
2021-08-23 10:31:47 PDT
Comment on
attachment 436167
[details]
Patch Thank you!
EWS
Comment 3
2021-08-23 10:36:52 PDT
Committed
r281454
(
240836@main
): <
https://commits.webkit.org/240836@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436167
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-08-23 10:37:23 PDT
<
rdar://problem/82251234
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug